[dev] new compilers flags

--- a/user/third/Makefile
+++ b/user/third/Makefile
@@ -1,6 +1,14 @@
+include ../build.mk
+
 OBJS := hashmap.o slog.o sds.o seqptrmap.o elasticqueue.o elasticarray.o xdr.o xdr_mem.o\
 	linenoise.o
 CC := gcc
+
+ifeq ($(UCAFS_DEV), 1)
+	FLAGS := -O0 -g
+else
+	FLAGS := -O2
+endif
 
 all: libthird.a
 
@@ -12,4 +20,4 @@ libthird.a: $(OBJS)
 
 .PHONY: clean
 clean:
-	rm -rf *.o
+	rm -rf *.o *.a
