[dev] Completed hierarchical organization and added test bed

--- a/user/tests/Makefile
+++ b/user/tests/Makefile
@@ -6,7 +6,9 @@ include $(UCAFS_DIR)/sgx_defs.mk
 
 LIBS += $(App_Link_Flags) -lgtest -lgtest_main
 
-TESTS = test_structs
+TESTBED_FILE = ucafs_testbed.c
+
+TESTS = test_structs test_dirops
 
 all: tests
 
@@ -16,7 +18,13 @@ libucafs.a: ../libucafs.a
 		make -C ../ && cp $< $@
 
 test_structs: test_structs.cc libucafs.a
-		@$(CXX) $(CPPFLAGS) $(App_Cpp_Flags) -I$(UCAFS_DIR) $< ../libucafs.a $(LIBS)  -o $@
+		@$(CXX) $(CPPFLAGS) $(App_Cpp_Flags) -I$(UCAFS_DIR) $< $(TESTBED_FILE)\
+			../libucafs.a $(LIBS)  -o $@
+		@echo "$(CXX) => $@"
+
+test_dirops: test_dirops.cc libucafs.a
+		@$(CXX) $(CPPFLAGS) $(App_Cpp_Flags) -I$(UCAFS_DIR) $< $(TESTBED_FILE)\
+			../libucafs.a $(LIBS)  -o $@
 		@echo "$(CXX) => $@"
 
 .PHONY: clean
