temporary coommit fixing the transfer issue

--- a/module/Makefile
+++ b/module/Makefile
@@ -1,6 +1,7 @@
 USER_DIR := ../user
 OPENAFS_PATH = ~/openafs
 OPENAFS_DIR := ~/openafs/src/afs
+VANILLA_DIR := ~/vanilla-openafs/src/afs
 FILES := \
 	ucafs_kern.c\
 	ucafs_kern_dirops.c\
@@ -13,9 +14,12 @@ FILES := \
 
 all: install
 
-install: ucafs_header.h
+install: ucafs_header.h install-vanilla
 	@cp -u $(FILES) $(OPENAFS_DIR)
 	@echo "install: $(FILES)"
+
+install-vanilla:
+	@cp -u ucafs_header.h $(VANILLA_DIR)
 
 .PHONY: diff
 diff:
