--- a/user/sgx/Makefile
+++ b/user/sgx/Makefile
@@ -10,10 +10,16 @@ OBJS = uc_sgx_main.o\
 	   elasticqueue.o\
 	   seqptrmap.o
 
+SIV_SRC := GCM_SIV.c polyval.c enc_msg_x4.c enc_msg_x8.c\
+			dec_msg_htable_x6.c key_expands_and_enc.c
+GCMSIV_OBJECTS := $(subst .c,.o,$(SIV_SRC))
+GCMSIV_SOURCES := $(patsubst %,siv/%,$(SIV_SRC))
+FLAGS := $(Enclave_C_Flags) -mpclmul -maes -mavx -w
+
 .PHONY: all
 all: enclave.signed.so
 
-Enclave_C_Flags += -DUCPRIV_ENCLAVE -I../mbedtls/include -I../
+Enclave_C_Flags += -DUCPRIV_ENCLAVE -I../mbedtls/include -I../ \
 
 libmbedcrypto.a: ../mbedtls/library/libmbedcrypto.a
 	cp $^ $@
@@ -24,6 +30,10 @@ libmbedcrypto.a: ../mbedtls/library/libmbedcrypto.a
 
 %.o: %.c
 	@$(CC) $(Enclave_C_Flags) -c $< -o $@
+	@echo "CC => $@"
+
+%.o: siv/%.c
+	@$(CC) $(FLAGS) -I/usr/lib/gcc/x86_64-linux-gnu/4.9/include/ -c $< -o $@
 	@echo "CC => $@"
 
 private_key.pem:
@@ -37,8 +47,11 @@ enclave_t.o: enclave_t.c
 	@$(CC) $(Enclave_C_Flags) -c $< -o $@
 	@echo "CC => $@"
 
-enclave.so: enclave_t.o $(OBJS) libmbedcrypto.a
-	$(CC) $^ -o $@ $(Enclave_Link_Flags)
+
+
+enclave.so: enclave_t.o $(OBJS) $(GCMSIV_OBJECTS) libmbedcrypto.a
+	@echo $(SIV_OBJS)
+	$(CC) $^ -o $@ $(Enclave_Link_Flags) $(FLAGS)
 	@echo "LINK => $@"
 
 enclave.signed.so: enclave.so private_key.pem
