djoko: some minor adjustments to allow client to run
The ping message from the kernel works. But it seems the refactoring
might have broken the other messages.

--- a/user/sgx/Makefile
+++ b/user/sgx/Makefile
@@ -49,7 +49,7 @@ enclave_t.o: enclave_t.c
 
 
 
-enclave.so: enclave_t.o $(OBJS) $(GCMSIV_OBJECTS) libmbedcrypto.a
+enclave.so: enclave_t.o $(OBJS) libmbedcrypto.a
 	@echo $(SIV_OBJS)
 	$(CC) $^ -o $@ $(Enclave_Link_Flags) $(FLAGS)
 	@echo "LINK => $@"
