--- a/libnexus/Makefile
+++ b/libnexus/Makefile
@@ -1,6 +1,5 @@
 
 
-INCLUDES := -I../libnexus
 CFLAGS = -W -Wall -Werror -D_GNU_SOURCE -Wno-nonnull -Wno-unused-parameter -std=gnu11 $(INCLUDES)
 
 
@@ -28,8 +27,25 @@ all: libnexus.a
 %.a : %.o
 	$(call build,AR,$(AR) rcs $@ $^)
 
+
+
 libnexus.a: $(objs)
 	$(call build,AR,$(AR) rcs $@ $^)
+
+
+
+define cscope-all-sources
+	( find . $(RCS_FIND_IGNORE) \
+		\( -name '*.[chS]' -o -name '*.cc' \) -print; \
+	)
+endef
+
+
+cscope:
+	$(call build,FILELIST,(echo \-k; echo \-q; $(cscope-all-sources)) > cscope.files)
+	$(call build,MAKE,cscope -b)
+
+
 
 .PHONY: clean
 clean:
