--- a/openafs/Makefile.in
+++ b/openafs/Makefile.in
@@ -672,7 +672,7 @@ finale: project cmd comerr afsd butc tbutc tbudb @ENABLE_KERNEL_MODULE@ audit ka
 	platform kopenafs authtools
 	+${COMPILE_PART1} finale ${COMPILE_PART2}
 
-finale_nolibafs: project cmd comerr afsd butc tbutc tbudb libuafs audit kauth log \
+finale_nolibafs: project cmd comerr afsd butc tbutc tbudb audit kauth log \
 	ptserver tptserver scout bu_utils ubik tubik uss bozo @VFSCK@ volser tvolser tsalvaged \
 	dviced dvolser libafscp\
 	venus venustests update xstat afsmonitor rxdebug libafsrpc \
