--- a/openafs/src/libafs/Makefile.common.in
+++ b/openafs/src/libafs/Makefile.common.in
@@ -68,11 +68,12 @@ single_instdir_libafs: install_libafs
 single_destdir_libafs: dest_libafs
 
 # nexus objects
-NEXUSOBJS = nexus_kern_mod.o\
+NEXUSOBJS = nexus_main.o\
 	nexus_kern_store.o\
 	nexus_kern_fetch.o\
 	nexus_kern_dirops.o\
-	nexus_kern.o
+	nexus_kern.o \
+	nexus_util.o
 
 NEXUSDIR = ${TOP_OBJDIR}/shimlayer
 
@@ -83,7 +84,7 @@ nexus_kern_store.o: $(NEXUSDIR)/nexus_kern_store.c
 nexus_kern_fetch.o: $(NEXUSDIR)/nexus_kern_fetch.c
 	$(CRULE_OPT)
 
-nexus_kern_mod.o: $(NEXUSDIR)/nexus_kern_mod.c
+nexus_main.o: $(NEXUSDIR)/nexus_main.c
 	$(CRULE_OPT)
 
 nexus_kern_dirops.o: $(NEXUSDIR)/nexus_kern_dirops.c
@@ -91,6 +92,11 @@ nexus_kern_dirops.o: $(NEXUSDIR)/nexus_kern_dirops.c
 
 nexus_kern.o: $(NEXUSDIR)/nexus_kern.c
 	$(CRULE_OPT)
+
+nexus_util.o: $(NEXUSDIR)/nexus_util.c
+	$(CRULE_OPT)
+
+
 
 # placeholder for any sources that are built prior to compiling libafs
 depsrcs: 
