First iteration of nexus data structures
- nx_types.h for supernode, dirnode & filenode
- nx_untrusted.h defines function prototypes for the untrusted code
- nx_volume.c handles supernode stuff
- nx_encode.c converts between string and binary representation

--- a/libnexus/Makefile
+++ b/libnexus/Makefile
@@ -4,7 +4,11 @@ CFLAGS = -W -Wall -Werror -D_GNU_SOURCE -Wno-nonnull -Wno-unused-parameter -std=
 
 
 
-objs := nx_dirops.o
+objs := nx_main.o\
+	nx_volume.o\
+	nx_utils.o\
+	nx_dirops.o\
+	nx_encode.o
 
 build = \
         @if [ -z "$V" ]; then \
