Added enclave directory with some interface definitions

--- a/libnexus/Makefile
+++ b/libnexus/Makefile
@@ -1,10 +1,11 @@
+include build.mk
+
+CFLAGS = -W -Wall -Werror -D_GNU_SOURCE -Wno-nonnull -Wno-unused-parameter -std=gnu11 $(INCLUDES) $(App_C_Flags)
 
 
-CFLAGS = -W -Wall -Werror -D_GNU_SOURCE -Wno-nonnull -Wno-unused-parameter -std=gnu11 $(INCLUDES)
 
-
-
-objs := nx_main.o\
+objs := nx_enclave_u.o\
+	nx_main.o\
 	nx_volume.o\
 	nx_utils.o\
 	nx_dirops.o\
@@ -31,6 +32,14 @@ all: libnexus.a
 %.a : %.o
 	$(call build,AR,$(AR) rcs $@ $^)
 
+
+nx_enclave_u.c: enclave/nx_enclave.edl
+	@$(SGX_EDGER8R) --untrusted --untrusted-dir ./ $^
+	@echo "GEN =>  $@"
+
+nx_enclave_u.o: nx_enclave_u.c
+	$(CC) $(App_C_Flags) -c $< -o $@
+	@echo "CC <= $^"
 
 
 libnexus.a: $(objs)
