add libuafs back to compile targets. Full compilation can now be done.

--- a/openafs/Makefile.in
+++ b/openafs/Makefile.in
@@ -664,7 +664,7 @@ jafsadm: libjafsadm
 build_tools: config des comerr rxgen
 	+${COMPILE_PART1} util ${COMPILE_PART2A} buildtools_clean
 
-finale: project cmd comerr afsd butc tbutc tbudb @ENABLE_KERNEL_MODULE@ audit kauth log \
+finale: project cmd comerr afsd butc tbutc tbudb @ENABLE_KERNEL_MODULE@ libuafs audit kauth log \
 	ptserver tptserver scout bu_utils ubik uss bozo @VFSCK@ volser tvolser tsalvaged \
 	dviced dvolser libafscp \
 	venus venustests update xstat afsmonitor rxdebug libafsrpc \
@@ -672,7 +672,7 @@ finale: project cmd comerr afsd butc tbutc tbudb @ENABLE_KERNEL_MODULE@ audit ka
 	platform kopenafs authtools
 	+${COMPILE_PART1} finale ${COMPILE_PART2}
 
-finale_nolibafs: project cmd comerr afsd butc tbutc tbudb audit kauth log \
+finale_nolibafs: project cmd comerr afsd butc tbutc tbudb libuafs audit kauth log \
 	ptserver tptserver scout bu_utils ubik tubik uss bozo @VFSCK@ volser tvolser tsalvaged \
 	dviced dvolser libafscp\
 	venus venustests update xstat afsmonitor rxdebug libafsrpc \
