Started working on admin interface - added launch enclave - changed rootkey->volumekey

--- a/libnexus/Makefile
+++ b/libnexus/Makefile
@@ -1,15 +1,19 @@
 include build.mk
 
 MBEDTLS_PATH ?= /usr/local/include/mbedtls/include
-MBEDTLS_LIB ?= -lmbedtls
 
 INCLUDES += -I$(MBEDTLS_PATH)
-CFLAGS = -W -Wall -Werror -D_GNU_SOURCE -Wno-nonnull -Wno-unused-parameter -std=gnu11 $(INCLUDES) $(App_C_Flags)
+CFLAGS = -W -Wall -Werror -D_GNU_SOURCE -Wno-nonnull -Wno-unused-parameter -std=gnu11\
+	 $(INCLUDES) $(App_C_Flags)
+
+LIBS = -lmbedcrypto $(App_Link_Flags) -luuid
 
 
-
-objs :=	nexus_fs_ops.o \
+objs :=	nx_enclave_u.o \
+	nexus_fs_ops.o \
 	nexus_json.o \
+	nexus_volume.o \
+	nexus_encode.o \
 	jsmn.o \
 	nexus_util.o 
 build = \
@@ -22,7 +26,7 @@ build = \
         fi
 
 
-all: libnexus.a
+all: libnexus.a nexus-admin
 
 % : %.c
 	$(call build,CC,$(CC) $(CFLAGS) $< -o $@)
@@ -33,12 +37,15 @@ all: libnexus.a
 %.a : %.o
 	$(call build,AR,$(AR) rcs $@ $^)
 
-
+nx_enclave_u.c: enclave/nx_enclave.edl
+	@$(SGX_EDGER8R) --untrusted --untrusted-dir ./ $^
+	@echo "GEN =>  $@"
 
 libnexus.a: $(objs)
 	$(call build,AR,$(AR) rcs $@ $^)
 
-
+nexus-admin: nx_admin.o libnexus.a
+	$(call build,CC,$(CC) $^ $(LIBS) -o $@)
 
 define cscope-all-sources
 	( find . $(RCS_FIND_IGNORE) \
@@ -55,4 +62,4 @@ cscope:
 
 .PHONY: clean
 clean:
-	rm -f $(wildcard *.o *.a)
+	rm -f $(wildcard *.o *.a) nexus-admin nx_enclave_u.*
