Added dirnode_new along with initial test file
- queue.h from FREEBSD for lists
- using cheat.h to run tests

--- a/libnexus/enclave/Makefile
+++ b/libnexus/enclave/Makefile
@@ -3,7 +3,7 @@ include ../build.mk
 CC=gcc
 
 APP_PATH = ..
-OBJS = nx_enclave_main.o nx_enclave_crypto.o
+OBJS = nx_enclave_main.o nx_enclave_crypto.o nx_enclave_dirnode.o
 
 CRYPTO_LIB := mbedtls/library/libmbedcrypto.a
 CRYPTO_CONFIG := mbedtls/include/mbedtls/config.h
