Completed dirnode add/remove/get [tested]
- moved to unity as our test framework
- implemented a dirnode_cache in enclave space

--- a/libnexus/tests/Makefile
+++ b/libnexus/tests/Makefile
@@ -27,7 +27,7 @@ build = \
 %.o : %.c
 	$(call build,CC,$(CC) $(CFLAGS) -c $<  -o $@)
 
-test_dirnode: nx_test_dirnode.o libnexus.a
+test_dirnode: nx_test_dirnode.o unity/unity.o libnexus.a
 	$(call build,CC,$(CC) $^ $(LIBS) -o $@)
 
 .PHONY: clean
