Initial commit dentry to support paths
- root path works, other paths to be tests
- added test_misc to test path builder
- nx_inode is loaded from disk on demand from dentry

--- a/libnexus/Makefile
+++ b/libnexus/Makefile
@@ -16,6 +16,7 @@ objs :=	nx_enclave_u.o \
 	nexus_encode.o \
 	nexus_main.o \
 	nexus_vfs.o \
+	nexus_dentry.o \
 	jsmn.o \
 	nexus_util.o 
 build = \
