--- a/libnexus/tests/Makefile
+++ b/libnexus/tests/Makefile
@@ -4,7 +4,7 @@ CFLAGS += -I../ $(App_C_Flags)
 
 LIBS := -lmbedcrypto $(App_Link_Flags) -luuid
 
-tests := test_dirnode test_dirops
+tests := test_dirnode test_dirops test_misc
 
 all: $(tests)
 
@@ -31,6 +31,9 @@ test_dirnode: nx_test_dirnode.o unity/unity.o libnexus.a
 	$(call build,CC,$(CC) $^ $(LIBS) -o $@)
 
 test_dirops: nx_test_dirops.o unity/unity.o libnexus.a
+	$(call build,CC,$(CC) $^ $(LIBS) -o $@)
+
+test_misc: nx_test_misc.o unity/unity.o libnexus.a
 	$(call build,CC,$(CC) $^ $(LIBS) -o $@)
 
 .PHONY: clean
