switched to building shared objects
libnexus/ -> libnexus.so
sgx_backend/ -> libsgx_backend.so

--- a/libnexus/Makefile
+++ b/libnexus/Makefile
@@ -2,7 +2,7 @@
 
 INCLUDES =
 
-CFLAGS = -W -Wall -Werror -D_GNU_SOURCE -Wno-nonnull -Wno-unused-parameter -std=gnu11
+CFLAGS = -W -Wall -Werror -D_GNU_SOURCE -Wno-nonnull -Wno-unused-parameter -std=gnu11 -fPIC
 
 
 LIBS = -luuid
@@ -13,6 +13,7 @@ objs :=	nexus_fs_ops.o \
 	nexus_main.o \
 	nexus_path.o \
 	nexus_vfs.o \
+	nexus_dentry.o \
 	jsmn.o \
 	nexus_json.o \
 	nexus_util.o 
@@ -28,7 +29,7 @@ build = \
         fi
 
 
-all: libnexus.a
+all: libnexus.so
 
 % : %.c
 	$(call build,CC,$(CC) $(CFLAGS) $< -o $@)
@@ -39,8 +40,8 @@ all: libnexus.a
 %.a : %.o
 	$(call build,AR,$(AR) rcs $@ $^)
 
-libnexus.a: $(objs)
-	$(call build,AR,$(AR) rcs $@ $^)
+libnexus.so: $(objs)
+	$(call build,CC,$(CC) $^ -shared $(LIBS) -o $@)
 
 define cscope-all-sources
 	( find . $(RCS_FIND_IGNORE) \
@@ -57,4 +58,4 @@ cscope:
 
 .PHONY: clean
 clean:
-	rm -f $(wildcard *.o *.a) cscope.*
+	rm -f $(wildcard *.o *.so *.a) cscope.*
