--- a/metadata_store/Makefile
+++ b/metadata_store/Makefile
@@ -4,6 +4,10 @@ INCLUDES = -I../libnexus
 CFLAGS = -W -Wall -Werror -D_GNU_SOURCE -Wno-nonnull -Wno-unused-parameter -std=gnu11 -fPIC\
 		 $(INCLUDES)
 
+ifeq ($(DEBUG), 1)
+	CFLAGS += -g3
+endif
+
 
 LIBS = 
 
