Refactored dentry code, removed useless directories
- add run-nexus.py to run nexus based on a config

--- a/sample_profile/kdb_afs_config.json
+++ b/sample_profile/kdb_afs_config.json
@@ -3,5 +3,5 @@
     "privatekey": "sample_profile/sample_privkey.key",
     "metadata_dir": "/afs/maatta.sgx/user/kdb/.nxs",
     "data_dir": "/afs/maatta.sgx/user/kdb/nexus",
-    "volume_key": "$HOME/sample_volumekey"
+    "volume_key": "../sample_volumekey"
 }
