--- a/libnexus/Makefile
+++ b/libnexus/Makefile
@@ -6,7 +6,7 @@ INCLUDES =
 CFLAGS = -W -Wall -Werror -D_GNU_SOURCE -Wno-nonnull -Wno-unused-parameter -std=gnu11 -fPIC
 
 ifeq ($(DEBUG), 1)
-	CFLAGS += -g3
+	CFLAGS += -g3 -DDEBUG
 endif
 
 LIBS = -luuid
