fixed build error & reverted forgotten comment in nexus_volume.c

--- a/metadata_store/Makefile
+++ b/metadata_store/Makefile
@@ -13,13 +13,11 @@ LIBS =
 
 
 objs :=	nexus_metadata_store.o \
-	nexus_util.o \
 	nexus_path.o \
 	nexus_vfs.o \
 	nexus_dentry.o \
 	nexus_volume.o \
-	nexus_mstore_flat_directory.o \
-	base58.o
+	nexus_mstore_flat_directory.o
 
 
 build = \
