--- a/libnexus/Makefile
+++ b/libnexus/Makefile
@@ -15,7 +15,9 @@ LIBS = -luuid
 objs :=	nexus_fs_ops.o \
 	nexus_encode.o \
 	nexus_main.o \
+	nexus_util.o \
 	jsmn.o \
+	base58.o \
 	nexus_json.o
 
 
