Added 2-level git-style metadata store layout
- moved timestamp function into the vfs
- removed content from nexus_volume into nexus_vfs

--- a/metadata_store/Makefile
+++ b/metadata_store/Makefile
@@ -16,7 +16,7 @@ objs :=	nexus_metadata_store.o \
 	nexus_path.o \
 	nexus_vfs.o \
 	nexus_dentry.o \
-	nexus_volume.o \
+	nexus_mstore_twolevel_directory.o \
 	nexus_mstore_flat_directory.o
 
 
